--- a/win32/libsnmp_dll/libsnmp_dll.vcproj
+++ b/win32/libsnmp_dll/libsnmp_dll.vcproj
@@ -44,7 +44,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\../lib/release/libsnmp_dll.tlb"
+				TypeLibraryName="../lib/$(IntDir)/libsnmp_dll.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -58,7 +58,7 @@
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\Release/libsnmp_dll.pch"
+				PrecompiledHeaderFile="$(IntDir)/libsnmp_dll.pch"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 			/>
@@ -79,11 +79,11 @@
 				OutputFile="../bin/$(IntDir)/netsnmp.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\libsnmp.def"
+				ModuleDefinitionFile="libsnmp.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="../lib/$(IntDir)/$(TargetName).pdb"
 				SubSystem="1"
-				ImportLibrary=".\../lib/release/netsnmp.lib"
+				ImportLibrary="../lib/$(IntDir)/netsnmp.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -98,104 +98,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\../lib/release/libsnmp_dll.bsc"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
-		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="2"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="true"
-				SuppressStartupBanner="true"
-				TargetEnvironment="1"
-				TypeLibraryName=".\../lib/debug/libsnmp_dll.tlb"
-				HeaderFileName=""
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP3"
-				Optimization="0"
-				AdditionalIncludeDirectories=".,..,..\..\snmplib,..\..,..\..\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_WARNINGS;NETSNMP_DLL"
-				StringPooling="true"
-				MinimalRebuild="true"
-				RuntimeLibrary="3"
-				BufferSecurityCheck="false"
-				PrecompiledHeaderFile=".\Debug/libsnmp_dll.pch"
-				WarningLevel="3"
-				SuppressStartupBanner="true"
-				DebugInformationFormat="3"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
-				Culture="1033"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
-				OutputFile="../bin/$(IntDir)/netsnmp.dll"
-				LinkIncremental="1"
-				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\libsnmp.def"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="../lib/$(IntDir)/$(TargetName).pdb"
-				SubSystem="1"
-				ImportLibrary=".\../lib/debug/netsnmp.lib"
-				TargetMachine="1"
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-				SuppressStartupBanner="true"
-				OutputFile=".\../lib/debug/libsnmp_dll.bsc"
+				OutputFile="../lib/$(IntDir)/libsnmp_dll.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -238,7 +141,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="3"
-				TypeLibraryName=".\../lib/release/libsnmp_dll.tlb"
+				TypeLibraryName="../lib/$(IntDir)/libsnmp_dll.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -252,7 +155,7 @@
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\Release/libsnmp_dll.pch"
+				PrecompiledHeaderFile="$(IntDir)/libsnmp_dll.pch"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 			/>
@@ -273,11 +176,11 @@
 				OutputFile="../bin/$(IntDir)/netsnmp.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\libsnmp.def"
+				ModuleDefinitionFile="libsnmp.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="../lib/$(IntDir)/$(TargetName).pdb"
 				SubSystem="1"
-				ImportLibrary=".\../lib/release/netsnmp.lib"
+				ImportLibrary="../lib/$(IntDir)/netsnmp.lib"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -292,7 +195,104 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\../lib/release/libsnmp_dll.bsc"
+				OutputFile="../lib/$(IntDir)/libsnmp_dll.bsc"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName="../lib/$(IntDir)/libsnmp_dll.tlb"
+				HeaderFileName=""
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP3"
+				Optimization="0"
+				AdditionalIncludeDirectories=".,..,..\..\snmplib,..\..,..\..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_WARNINGS;NETSNMP_DLL"
+				StringPooling="true"
+				MinimalRebuild="true"
+				RuntimeLibrary="3"
+				BufferSecurityCheck="false"
+				PrecompiledHeaderFile="$(IntDir)/libsnmp_dll.pch"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="ws2_32.lib"
+				OutputFile="../bin/$(IntDir)/netsnmp.dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				ModuleDefinitionFile="libsnmp.def"
+				GenerateDebugInformation="true"
+				ProgramDatabaseFile="../lib/$(IntDir)/$(TargetName).pdb"
+				SubSystem="1"
+				ImportLibrary="../lib/$(IntDir)/netsnmp.lib"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+				SuppressStartupBanner="true"
+				OutputFile="../lib/$(IntDir)/libsnmp_dll.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -335,7 +335,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="3"
-				TypeLibraryName=".\../lib/debug/libsnmp_dll.tlb"
+				TypeLibraryName="../lib/$(IntDir)/libsnmp_dll.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -348,7 +348,7 @@
 				MinimalRebuild="true"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
-				PrecompiledHeaderFile=".\Debug/libsnmp_dll.pch"
+				PrecompiledHeaderFile="$(IntDir)/libsnmp_dll.pch"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -370,11 +370,11 @@
 				OutputFile="../bin/$(IntDir)/netsnmp.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ModuleDefinitionFile=".\libsnmp.def"
+				ModuleDefinitionFile="libsnmp.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="../lib/$(IntDir)/$(TargetName).pdb"
 				SubSystem="1"
-				ImportLibrary=".\../lib/debug/netsnmp.lib"
+				ImportLibrary="../lib/$(IntDir)/netsnmp.lib"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -389,7 +389,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\../lib/debug/libsnmp_dll.bsc"
+				OutputFile="../lib/$(IntDir)/libsnmp_dll.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
